--- a/package.json
+++ b/package.json
@@ -10,22 +10,21 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.2.1",
-
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
-
     "expo": "~51.0.6",
     "expo-font": "^12.0.6",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
-
     "react-native-calendars": "^1.1305.0",
+    "react-native-modal": "^13.0.1",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.10",
+    "react-native-xml2js": "^1.0.3",
     "xml2js": "^0.6.2"
-
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
